argocd-apps/apps/kuard/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    job: kurad-app
    app: kuard
spec:
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: kuard
